feat: restful语言实现对optional的支持、实现对enum的支持